spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,12 +83,14 @@
   
   border-bottom: 1px solid $base2;
   margin: ($spacing-unit * 2) 0;
+  width: 100%;
   
   p {
     max-width: ($on-laptop + ($spacing-unit * 2)) / 1.618;
     text-align: center;
     margin: 0 auto;
   }
+  
   img {
     text-align: center;
     margin-bottom: 0 auto $spacing-unit;
@@ -98,11 +100,6 @@
 /* Site footer */
 .site-footer {
   border-top: 1px solid $base2;
-  padding: $spacing-unit 0;
-}
-
-/* Page content */
-.page-content {
   padding: $spacing-unit 0;
 }
 
